miniml-syntax/src/snapshots/miniml__parser__tests__parse_bool.snap
---
source: src/parser/tests.rs
expression: "tree.expect(\"Tree is empty\")"
---
Expr(
    Lit(
        Bool(
            true,
        ),
    ),
)
