miniml-syntax/src/snapshots/miniml__parser__tests__parse_float.snap
---
source: src/parser/tests.rs
expression: "tree.expect(\"Tree is empty\")"
---
Expr(
    Lit(
        Real(
            5.23,
        ),
    ),
)
