miniml-syntax/src/snapshots/miniml__parser__tests__parse_string.snap
---
source: src/parser/tests.rs
expression: "tree.expect(\"Tree is empty\")"
---
Expr(
    Lit(
        String(
            InternedString("Hello, World!"),
        ),
    ),
)
